new projects and gulp version update

--- a/about.html
+++ b/about.html
@@ -6,8 +6,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet"/>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="images/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="images/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="images/favicon-192x192.png" sizes="192x192" type="image/png">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
     <title>Ivan Chebotar - About me</title>
   </head>
   <body class="body">
@@ -21,7 +24,7 @@
         <div class="top-scroll-holder">
           <div class="top-scroll-holder-indicator"></div>
         </div>
-        <div class="container">
+        <div class="container container-fluid">
           <div class="header-group">
             <div class="logo">
               <a href="index.html" class="logo-holder">
@@ -55,11 +58,11 @@
                 <div class="about-content-description-title">
                   <h2>Hey</h2>
                   <div class="img-holder">
-                    <img src="images/waving-hand.png" alt="hi palm">
+                    <img src="images/waving-hand.webp" alt="hi palm">
                   </div>
                 </div>
-                <p class="about-content-description-text">My name is Ivan. I'm a Front-End developer from Urkaine. I love being in the outdoors. Traveling, drawing and taking pictures are some of the things I do to clear my mind and relax.</p>
-                <p class="about-content-description-text">I've been a developer for over 1 year now. In the past, I've finished courses related to CSS, HTML and JS coding. I'm currently focusing on developing my skills and leraning more interesting information in the sphere of developing.</p>
+                <p class="about-content-description-text">My name is Ivan. I'm a Web Developer. I love being in the outdoors. Traveling, drawing and taking pictures are some of the things I do to clear my mind and relax.</p>
+                <p class="about-content-description-text">I've been a developer for over 5 years now. In the past, I've finished courses related to CSS, HTML and JS coding. I'm currently focusing on developing my skills and leraning more interesting information in the sphere of developing.</p>
                 <p class="about-content-description-text">You can view all my works following <a href="projects.html">this link</a>.</p>
               </div>
               <div class="about-content-contacts">
@@ -67,7 +70,7 @@
                 <p class="about-content-contacts-text">You can follow me on <a target="_blank" href="https://www.instagram.com/vanya.cheb">Instagram</a> and <a target="_blank" href="https://www.linkedin.com/in/ivan-chebotar-926b071a3/">LinkedIn</a>.</p>
                 <div class="about-content-contacts-icon">
                   <div class="img-holder">
-                    <img src="images/personal-icon-3.png" alt="memoji like">
+                    <img src="images/personal-icon-3.webp" alt="memoji like">
                   </div>
                 </div>
                 <p class="about-content-contacts-text">If you want to work together you can also get in touch with me via <a href="#section6">email below</a>.</p>
@@ -77,7 +80,7 @@
         </section>
       </main>
       <footer class="footer" id="section6">
-        <div class="container">
+        <div class="container container-fluid">
           <div class="footer-content">
             <div class="footer-content-left">
               <div class="footer-content-left-description">
@@ -92,7 +95,7 @@
                 </div>
                 <div class="description-icon">
                   <div class="img-holder">
-                    <img src="images/personal-icon-4.png" alt="memoji like">
+                    <img src="images/personal-icon-4.webp" alt="memoji like">
                   </div>
                 </div>
               </div>
@@ -113,7 +116,7 @@
               </ul>
             </div>
           </div>
-          <h6 class="copyright">© 2022 All rights reserved</h6>
+          <h6 class="copyright"><span id="year"></span> Ivan Chebotrar</h6>
         </div>
       </footer>
     </div>
