--- a/error-page.html
+++ b/error-page.html
@@ -6,8 +6,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet"/>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="images/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="images/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="images/favicon-192x192.png" sizes="192x192" type="image/png">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
     <title>Ivan Chebotar - About me</title>
   </head>
   <body class="body">
@@ -53,7 +56,7 @@
               <h1 class="section-title">Unfortunately, I'm still working on this project</h1>
               <p class="section-sub-title">But you can look through my <a href="projects.html">other works</a></p>
               <div class="img-holder">
-                <img src="images/personal-icon-3.png" alt="memoji like">
+                <img src="images/personal-icon-3.webp" alt="memoji like">
               </div>
             </div>
           </div>
@@ -75,7 +78,7 @@
                 </div>
                 <div class="description-icon">
                   <div class="img-holder">
-                    <img src="images/personal-icon-4.png" alt="memoji like">
+                    <img src="images/personal-icon-4.webp" alt="memoji like">
                   </div>
                 </div>
               </div>
@@ -96,7 +99,7 @@
               </ul>
             </div>
           </div>
-          <h6 class="copyright">© 2022 All rights reserved</h6>
+          <h6 class="copyright"><span id="year"></span> Ivan Chebotrar</h6>
         </div>
       </footer>
     </div>
